# neuramind

./: .gitignore  Untitled Diagram.drawio  readme.md
common/: .gitignore  README.md  pyproject.toml
common-connector/: README.md  pyproject.toml
common-connector/src/common_connector/connectors/: base_connector.py  standard_aha_archive_connector.py
common-connector/src/neuramind_common_connector/: base_connector_manager.py
common-connector/src/neuramind_common_connector/connectors/: base_connector.py  base_events_connector.py  base_press_releases_connector.py  standard_aha_archive_connector.py  standard_drupal_events_connector.py  standard_website_chunks_connector.py  standard_website_connector.py
common/src/: .env
common/src/common/: config.py
common/src/common/enums/: phase.py
common/src/common/models/: aha_archiv_entry_model.py  aha_archive_entry_model.py  base_model.py  event_ model.py  job_position_model.py  organization_model.py  person_model.py  press_release_model.py  service_model.py  website_chunk_model.py
common/src/common/services/: assistants_service.py  db_session_builder.py  firebase.py
common/src/common/utitlities/: config.py
common/src/neuramind_common/: config.py
common/src/neuramind_common/models/: base_model.py  base_unstructured_model.py  event_model.py  job_position_model.py  organization_model.py  person_model.py  press_release_model.py  service_model.py  test_model_2.py  website_chunk_model.py
common/src/neuramind_common/services/: assistants_service.py  db_session_builder.py  firebase.py
common_connector/: pyproject.toml
common_connector/src/common_connector/: base_connector_manager.py
connector-api/: pyproject.toml
connector-api/src/neuramind_connector_api/: config.py  main.py
connector_api/: Dockerfile.staging  pyproject.toml
connector_api/src/connector_api/: config.py  main.py
connector_api/src/neuramind_connector_api/: main.py
connectors/: pyproject.toml
pypi-cloud/: Dockerfile  cloudbuild.yaml  requirements.txt  server.ini
(+9 files in other folders)
