[tool.poetry]
name = "neuramind-common-connector"
version = "0.1.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "neuramind_common_connector", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
neuramind-common = {git = "https://github.com/neuraflow-github/neuramind.git", subdirectory = "common"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
