[tool.poetry]
name = "neuramind-common-connector"
version = "0.1.5"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "neuramind_common_connector", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
neuramind-common = {path = "../common", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
