[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.1.23"
openai = "^1.43.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
neo4j = "^5.24.0"
firebase-admin = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
