[tool.poetry]
name = "connector-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
neuramind-common = {git = "https://github.com/neuraflow-github/neuramind.git", subdirectory = "common"}
neuramind-common-connector = {git = "https://github.com/neuraflow-github/neuramind.git", subdirectory = "common-connector"}
fastapi = {extras = ["all"], version = "^0.112.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
